--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,15 +1,17 @@
-<h1>Hello, {{ title }}</h1>
+<app-nav></app-nav>
+<div class="container" style="margin-top: 100px;">
 
+  <ul>
 
-<ul>
-
-  @for (user of users; track user.id) {
+    @for (user of users; track user.id) {
     <li>
       {{ user.id }} - {{ user.userName }}
     </li>
 
-  }
+    }
     <!-- <li *ngFor="let user of users" >
       {{ user.id }} - {{ user.userName }}
     </li> -->
-</ul>
+  </ul>
+
+</div>
