--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,8 +2,9 @@
   <div class="container">
     <a class="navbar-brand" href="#">Dating App</a>
 
+    <!-- NOTE: This is the short way *ngIf="loggedIn" -->
 
-      <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <!-- <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="loggedIn">
         <li class="nav-item">
           <a class="nav-link">Matches</a>
         </li>
@@ -13,13 +14,46 @@
         <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true">Messages</a>
         </li>
-      </ul>
+      </ul> -->
 
+      <!-- NOTE: More declarative  -->
 
-      <form class="d-flex">
-        <input class="form-control me-2" placeholder="Username">
-        <input class="form-control me-2" placeholder="Password" type="pwssword">
+      @if (loggedIn) {
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a class="nav-link">Matches</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Lists</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-disabled="true">Messages</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-disabled="true" (click)="logout()">Logout</a>
+          </li>
+        </ul>
+      }
+
+      @if (loggedIn) {
+        <div class="dropdown">
+          <a class="dropdown-toogle text-bg-light">
+            Wellcome user
+          </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item">Edit Profile</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" (click)="logout()">Logout</a>
+          </div>
+        </div>
+      }
+
+      @if (!loggedIn) {
+      <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex" autocomplete="off">
+        <input name="username" [(ngModel)]="model.username"  class="form-control me-2" placeholder="Username">
+        <input name="password" [(ngModel)]="model.password"  class="form-control me-2" placeholder="Password" type="pwssword">
         <button class="btn btn-outline-success" type="submit">Login</button>
       </form>
+    }
     </div>
 </nav>
