--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -36,15 +36,18 @@
       }
 
       @if (loggedIn) {
-        <div class="dropdown">
-          <a class="dropdown-toogle text-bg-light">
-            Wellcome user
-          </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item">Edit Profile</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" (click)="logout()">Logout</a>
-          </div>
+        <div class="btn-group" dropdown>
+          <button id="button-basic" dropdownToggle type="button" class="btn btn-success dropdown-toggle"
+                  aria-controls="dropdown-basic">
+                  Wellcome user <span class="caret"></span>
+          </button>
+          <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
+              role="menu" aria-labelledby="button-basic">
+            <li role="menuitem"><a class="dropdown-item">Edit Profile</a></li>
+            <li class="divider dropdown-divider"></li>
+            <li role="menuitem"><a class="dropdown-item" (click)="logout()">Logout</a>
+            </li>
+          </ul>
         </div>
       }
 
