UPDATE: localStorage on Login onInit

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
 
     <!-- NOTE: This is the short way *ngIf="loggedIn" -->
 
-      <!-- <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="loggedIn">
+    <!-- <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="loggedIn">
         <li class="nav-item">
           <a class="nav-link">Matches</a>
         </li>
@@ -16,47 +16,47 @@
         </li>
       </ul> -->
 
-      <!-- NOTE: More declarative  -->
+    <!-- NOTE: More declarative  -->
 
-      @if (loggedIn) {
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
-          <li class="nav-item">
-            <a class="nav-link">Matches</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Lists</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-disabled="true">Messages</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-disabled="true" (click)="logout()">Logout</a>
-          </li>
-        </ul>
-      }
-
-      @if (loggedIn) {
-        <div class="btn-group" dropdown>
-          <button id="button-basic" dropdownToggle type="button" class="btn btn-success dropdown-toggle"
-                  aria-controls="dropdown-basic">
-                  Wellcome user <span class="caret"></span>
-          </button>
-          <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
-              role="menu" aria-labelledby="button-basic">
-            <li role="menuitem"><a class="dropdown-item">Edit Profile</a></li>
-            <li class="divider dropdown-divider"></li>
-            <li role="menuitem"><a class="dropdown-item" (click)="logout()">Logout</a>
-            </li>
-          </ul>
-        </div>
-      }
-
-      @if (!loggedIn) {
-      <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex" autocomplete="off">
-        <input name="username" [(ngModel)]="model.username"  class="form-control me-2" placeholder="Username">
-        <input name="password" [(ngModel)]="model.password"  class="form-control me-2" placeholder="Password" type="pwssword">
-        <button class="btn btn-outline-success" type="submit">Login</button>
-      </form>
+    @if (accountService.currentUser()) {
+    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <li class="nav-item">
+        <a class="nav-link">Matches</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Lists</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" aria-disabled="true">Messages</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" aria-disabled="true" (click)="logout()">Logout</a>
+      </li>
+    </ul>
     }
+
+    @if (accountService.currentUser()) {
+    <div class="btn-group" dropdown>
+      <button id="button-basic" dropdownToggle type="button" class="btn btn-success dropdown-toggle"
+        aria-controls="dropdown-basic">
+        Wellcome user <span class="caret"></span>
+      </button>
+      <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
+        <li role="menuitem"><a class="dropdown-item">Edit Profile</a></li>
+        <li class="divider dropdown-divider"></li>
+        <li role="menuitem"><a class="dropdown-item" (click)="logout()">Logout</a>
+        </li>
+      </ul>
     </div>
+    }
+
+    @if (!accountService.currentUser()) {
+    <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex" autocomplete="off">
+      <input name="username" [(ngModel)]="model.username" class="form-control me-2" placeholder="Username">
+      <input name="password" [(ngModel)]="model.password" class="form-control me-2" placeholder="Password"
+        type="pwssword">
+      <button class="btn btn-outline-success" type="submit">Login</button>
+    </form>
+    }
+  </div>
 </nav>
