--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,17 +1,8 @@
 <app-nav></app-nav>
 <div class="container" style="margin-top: 100px;">
 
-  <ul>
-
-    @for (user of users; track user.id) {
-    <li>
-      {{ user.id }} - {{ user.userName }}
-    </li>
-
-    }
-    <!-- <li *ngFor="let user of users" >
-      {{ user.id }} - {{ user.userName }}
-    </li> -->
-  </ul>
+  <app-home>
+    
+  </app-home>
 
 </div>
