--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -19,11 +19,22 @@
 
     } @else {
 
-    <div class="container">
+    <!-- <div class="container">
       <div class="row justify-content-center">
         <div class="col-4">
           <app-register
           [usersFormHomeComponent]="users"
+          (cancelRegister)="cancelRegisterMode($event)"
+          ></app-register>
+        </div>
+      </div>
+    </div>
+    } -->
+
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-4">
+          <app-register
           (cancelRegister)="cancelRegisterMode($event)"
           ></app-register>
         </div>
