--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -7,12 +7,12 @@
   </div>
 
   <div class="mb-3 form-floating">
-    <input type="text" name="password" [(ngModel)]="model.password" class="form-control" placeholder="password">
+    <input type="password" name="password" [(ngModel)]="model.password" class="form-control" placeholder="password">
     <label for="password">Password</label>
   </div>
 
 
-  <div class="mb-3">
+  <!-- <div class="mb-3">
     <label>Who is your favorite user?</label>
     <select class="form-select">
       @for (user of usersFormHomeComponent(); track $index) {
@@ -21,7 +21,7 @@
         </option>
       }
     </select>
-  </div>
+  </div> -->
 
   <div class="form-group text-center">
     <button class="btn btn-success me-2" type="submit">Register</button>
