--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
-    <a class="navbar-brand" routerLink="/">Dating App</a>
+    <a class="navbar-brand" routerLink="/" RouterLinkActive="active">Dating App</a>
 
     <!-- NOTE: This is the short way *ngIf="loggedIn" -->
 
@@ -21,16 +21,13 @@
     @if (accountService.currentUser()) {
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
-        <a routerLink="/members" class="nav-link">Matches</a>
+        <a routerLink="/members" RouterLinkActive="active" class="nav-link ">Matches</a>
       </li>
       <li class="nav-item">
-        <a routerLink="/lists" class="nav-link" href="#">Lists</a>
+        <a routerLink="/lists" RouterLinkActive="active" class="nav-link" href="#">Lists</a>
       </li>
       <li class="nav-item">
-        <a routerLink="/messages" class="nav-link" aria-disabled="true">Messages</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" aria-disabled="true" (click)="logout()">Logout</a>
+        <a routerLink="/messages" RouterLinkActive="active" class="nav-link" aria-disabled="true">Messages</a>
       </li>
     </ul>
     }
