ADD test errors

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -30,6 +30,9 @@
         <a routerLink="/messages" RouterLinkActive="active" class="nav-link" aria-disabled="true">Messages</a>
       </li>
     }
+    <li class="nav-item">
+      <a routerLink="/errors" RouterLinkActive="active" class="nav-link" aria-disabled="true">Errors</a>
+    </li>
     </ul>
 
     @if (accountService.currentUser()) {
