--- a/client/src/app/errors/test-errors/test-errors.component.html
+++ b/client/src/app/errors/test-errors/test-errors.component.html
@@ -1,7 +1,7 @@
-<div>
+<div class="container text-center">
   <button class="btn btn-outline-primary" (click)="get400Error()">Test 400 error</button>
-  <button class="btn btn-outline-primary" (click)="get401Error()">Test 401 error</button>
-  <button class="btn btn-outline-primary" (click)="get404Error()">Test 404error</button>
-  <button class="btn btn-outline-primary" (click)="get500Error()">Test 500 error</button>
-  <button class="btn btn-outline-primary" (click)="get400ValidationError()">Test 400 validation error</button>
+  <button class="btn btn-outline-primary" style="margin-left: 10px;" (click)="get401Error()">Test 401 error</button>
+  <button class="btn btn-outline-primary" style="margin-left: 10px;" (click)="get404Error()">Test 404error</button>
+  <button class="btn btn-outline-primary" style="margin-left: 10px;" (click)="get500Error()">Test 500 error</button>
+  <button class="btn btn-outline-primary" style="margin-left: 10px;" (click)="get400ValidationError()">Test 400 validation error</button>
 </div>
