--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -3,14 +3,14 @@
     <img class="card-img-top" src="{{member().photoUrl || './assets/user.png'}}" alt="{{member().knownAs}}">
     <ul class="list-inline member-icons animate text-center mt-1">
       <li class="list-inline-item">
-        <button class="btn btn-primary" routerLink="/members/{{member().username}}"><i class="fa fa-user"></i></button>
+        <button class="btn btn-primary" routerLink="/member/{{member().username}}"><i class="fa fa-user"></i></button>
       </li>
       <!-- <li class="list-inline-item">
         <button class="btn btn-primary" (click)="addLike(member())"><i
             class="fa fa-heart"></i></button>
       </li> -->
       <li class="list-inline-item">
-        <button class="btn btn-primary" routerLink="/members/{{member().username}}/messages"><i
+        <button class="btn btn-primary" routerLink="/member/{{member().username}}/messages"><i
             class="fa fa-envelope"></i></button>
       </li>
     </ul>
