--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -42,7 +42,7 @@
         Welcome {{ accountService.currentUser()?.userName | titlecase }} <span class="caret"></span>
       </button>
       <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
-        <li role="menuitem"><a class="dropdown-item">Edit Profile</a></li>
+        <li role="menuitem"><a class="dropdown-item" routerLink="/member/edit">Edit Profile</a></li>
         <li class="divider dropdown-divider"></li>
         <li role="menuitem"><a class="dropdown-item" (click)="logout()">Logout</a>
         </li>
