--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-nav></app-nav>
 <div class="container" style="margin-top: 100px;">
-
+  <ngx-spinner>
+    <h3>loading...</h3>
+  </ngx-spinner>
   <!-- <app-home>
   </app-home> -->
 
