--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -79,7 +79,7 @@
          </form>
         </tab>
         <tab heading="Edit photos">
-          <app-photo-editor [member]="member"></app-photo-editor>
+          <app-photo-editor [member]="member" (memberChange)="onMemberchange($event)" ></app-photo-editor>
         </tab>
       </tabset>
     </div>
