ADD Change min picture

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -37,6 +37,7 @@
 
     @if (accountService.currentUser()) {
     <div class="btn-group" dropdown>
+      <img class="me-2" src="{{accountService.currentUser()?.photoUrl || './assets/user.png'}}" alt="">
       <button id="button-basic" dropdownToggle type="button" class="btn btn-success dropdown-toggle"
         aria-controls="dropdown-basic">
         Welcome {{ accountService.currentUser()?.userName | titlecase }} <span class="caret"></span>
