ADD Fragments inputs

--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,50 +1,79 @@
 <!-- <form #registerForm="ngForm" (ngSubmit)="register()" class="" autocomplete="off"> -->
-<form [formGroup]="registerForm" (ngSubmit)="register()" class="" autocomplete="off">
+<form
+  [formGroup]="registerForm"
+  (ngSubmit)="register()"
+  class=""
+  autocomplete="off"
+>
   <h2 class="text-center text-primary">Sign up</h2>
-  <hr>
-  <div class="mb-3 form-floating">
-    <!-- <input type="text" name="username" [(ngModel)]="model.username" class="form-control" placeholder="Username"> -->
-    <input [class.is-invalid]="registerForm.get('username')?.errors && registerForm.get('username')?.touched" type="text" name="username" formControlName="username" class="form-control" placeholder="Username">
-    <label for="username">Username</label>
-    <div class="invalid-feedback text-start">Please enter a username</div>
+  <hr />
+
+  <div class="mb-3">
+    <label style="margin-right: 10px"> I am a:</label>
+    <label class="form-check-label">
+      <input
+        type="radio"
+        class="form-check-input"
+        formControlName="gender"
+        value="male"
+      />
+      Male
+    </label>
+    <label class="form-check-label">
+      <input
+        type="radio"
+        class="form-check-input"
+        formControlName="gender"
+        value="female"
+      />
+      Female
+    </label>
   </div>
 
-  <div class="mb-3 form-floating">
-    <!-- <input type="password" name="password" [(ngModel)]="model.password" class="form-control" placeholder="password"> -->
-    <input [class.is-invalid]="registerForm.get('password')?.errors && registerForm.get('password')?.touched"  type="password" name="password" formControlName="password"  class="form-control" placeholder="password">
-    <label for="password">Password</label>
-    <div class="invalid-feedback text-start" *ngIf="registerForm.get('password')?.hasError('required')" >Please enter a password</div>
-    <div class="invalid-feedback text-start" *ngIf="registerForm.get('password')?.hasError('minlength')">Password must be at least 4 characters</div>
-    <div class="invalid-feedback text-start" *ngIf="registerForm.get('password')?.hasError('maxlength')">Password cannot exceed 8 characters</div>
-  </div>
+  <app-text-input
+    [formControl]="$any(registerForm.controls['username'])"
+    [label]="'Username'"
+  ></app-text-input>
 
-  <div class="mb-3 form-floating">
-    <input [class.is-invalid]="registerForm.get('confirmPassword')?.errors && registerForm.get('confirmPassword')?.touched" type="password" name="confirmPassword" formControlName="confirmPassword"  class="form-control" placeholder="Confirm password">
-    <label for="confirmPassword">Confirm Password</label>
-    <div class="invalid-feedback text-start" *ngIf="registerForm.get('confirmPassword')?.hasError('required')" >Please enter a password</div>
-    <div class="invalid-feedback text-start" *ngIf="registerForm.get('confirmPassword')?.hasError('isMatching')" >Passwords must match</div>
-  </div>
+  <app-text-input
+    [formControl]="$any(registerForm.controls['knownAs'])"
+    [label]="'Known As'"
+  ></app-text-input>
 
+  <app-date-picker
+    [formControl]="$any(registerForm.controls['dateOfBirth'])"
+    [label]="'Date Of Birth'"
+    [maxDate]="maxDate"
+  ></app-date-picker>
 
-  <!-- <div class="mb-3">
-    <label>Who is your favorite user?</label>
-    <select class="form-select">
-      @for (user of usersFormHomeComponent(); track $index) {
-        <option [value]="user.userName">
-          {{user.userName}}
-        </option>
-      }
-    </select>
-  </div> -->
+  <app-text-input
+    [formControl]="$any(registerForm.controls['city'])"
+    [label]="'City'"
+  ></app-text-input>
+
+  <app-text-input
+    [formControl]="$any(registerForm.controls['country'])"
+    [label]="'Country'"
+  ></app-text-input>
+
+  <app-text-input
+    [formControl]="$any(registerForm.controls['password'])"
+    [label]="'Password'"
+  ></app-text-input>
+
+  <app-text-input
+    [formControl]="$any(registerForm.controls['confirmPassword'])"
+    [label]="'Confirm Password'"
+  ></app-text-input>
 
   <div class="form-group text-center">
     <button class="btn btn-success me-2" type="submit">Register</button>
-    <button class="btn btn-danger me-2" type="button" (click)="cancel()">Cancel</button>
+    <button class="btn btn-danger me-2" type="button" (click)="cancel()">
+      Cancel
+    </button>
   </div>
 </form>
 
 <!-- NOTE: TEST Values  -->
-<!-- <p>Form Value: {{registerForm.value | json}}</p>
-<p>Form status: {{registerForm.status| json}}</p> -->
-
-
+<p>Form Value: {{ registerForm.value | json }}</p>
+<p>Form status: {{ registerForm.status | json }}</p>
