ADD validations on date

--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -66,8 +66,18 @@
     [label]="'Confirm Password'"
   ></app-text-input>
 
+  @if (validationErrors) {
+    <div class="alert alert-danger text-start">
+    <ul>
+      <li *ngFor="let error of validationErrors">
+        {{ error }}
+      </li>
+    </ul>
+  </div>
+  }
+
   <div class="form-group text-center">
-    <button class="btn btn-success me-2" type="submit">Register</button>
+    <button class="btn btn-success me-2" type="submit" [disabled]="registerForm.invalid">Register</button>
     <button class="btn btn-danger me-2" type="button" (click)="cancel()">
       Cancel
     </button>
@@ -75,5 +85,5 @@
 </form>
 
 <!-- NOTE: TEST Values  -->
-<p>Form Value: {{ registerForm.value | json }}</p>
-<p>Form status: {{ registerForm.status | json }}</p>
+<!-- <p>Form Value: {{ registerForm.value | json }}</p>
+<p>Form status: {{ registerForm.status | json }}</p> -->
