--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -85,5 +85,5 @@
 </form>
 
 <!-- NOTE: TEST Values  -->
-<!-- <p>Form Value: {{ registerForm.value | json }}</p>
-<p>Form status: {{ registerForm.status | json }}</p> -->
+<p>Form Value: {{ registerForm.value | json }}</p>
+<p>Form status: {{ registerForm.status | json }}</p>
