--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -49,6 +49,31 @@
         Reset filters
       </button>
 
+      <div class="col">
+        <div class="btn-group float-end">
+          <button
+            type="button"
+            class="btn btn-primary"
+            name="orderBy"
+            [(ngModel)]="userParams.orderBy"
+            (click)="loadMembers()"
+            btnRadio="lastActive"
+          >
+            Last active
+          </button>
+          <button
+            type="button"
+            class="btn btn-primary"
+            name="orderBy"
+            [(ngModel)]="userParams.orderBy"
+            (click)="loadMembers()"
+            btnRadio="created"
+          >
+            Newest members
+          </button>
+        </div>
+      </div>
+
     </form>
   </div>
 
